--- a/backend/Catalog/src/Catalog.Application/Catalog.Application.csproj
+++ b/backend/Catalog/src/Catalog.Application/Catalog.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="16.0.0" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
   </ItemGroup>
 
